<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- to toggle the open close button of the navigation drawer -->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>

   <!-- ////////////////downloading payload-->
    <string name="progress_text">Progress: %1$d%%</string>

    <string name="versionName">Umrani Tool</string>
    <string name="get_information">CLICK HERE GET DEVICE INFORMATION</string>
    <string name="hard_soft_info">DEVICE FULL INFORMATION</string>
    <string name="manufacturer">MOBILE: </string>
    <string name="model">MODEL: </string>
    <string name="brand">BRAND: </string>
    <string name="versioncode">ANDROID VERSION: </string>
    <string name="serial">SERIAL NUMBER: </string>
    <string name="board">MOBILE BOARD: </string>
    <string name="sdk">ANDROID SDK CODE: </string>
    <string name="incremental">KARNEL VERSION: </string>
    <string name="id">BUILD ID: </string>
    <string name="typee">TYPE: </string>
    <string name="user">USER: </string>
    <string name="base">BASE: </string>
    <string name="host">HOST: </string>
    <string name="fingerprint">FINGERPRINT: </string>


    <string name="android_version">Android Version :</string>
    <string name="device">Device :</string>
    <string name="verify">Verify</string>
    <string name="verify_root_status">Verify Root Status</string>
    <string name="cts">CTS :</string>
    <string name="basic_integrity">Basic Integrity :</string>
    <string name="verify_safetynet_status">Verify SafetyNet Status</string>
    <string name="verify_play_integrity_status">Verify Play Integrity Status</string>
    <string name="meets_basic_integrity">Basic Integrity :</string>
    <string name="meets_device_integrity">Device Integrity :</string>
    <string name="meets_strong_integrity">Strong Integrity :</string>
    <string name="icoon">icon</string>


    <string name="choose">Choose</string>
    <string name="choose_app">Choose App</string>
    <string name="installed_app">Installed App</string>
    <string name="installed_module">Installed Module</string>
    <string name="empty_empty">Empty</string>
    <string name="filter">Filter</string>
    <string name="open_source_path">Open Source</string>
    <string name="xp_setting">Xposed Setting</string>
    <string name="tg_group">Telegram Group</string>
    <string name="fake_location">Fake Location(Preview)</string>
    <string name="real_location">Real Location</string>
    <string name="set_location">Set Fake Location Successfully:%s-%s</string>
    <string name="close_fake_location">Disable FakeLocation</string>
    <string name="close_app_fake_location">Disable FakeLocation for %s</string>
    <string name="close_fake_location_success">Disable FakeLocation for %s Successfully</string>
    <string name="setting">Setting</string>
    <string name="jump_module">Go to Module Manager</string>
    <string name="module_setting">Module Manager</string>
    <string name="enable_xposed">Enable Xposed Framework</string>
    <string name="hider">Hide</string>
    <string name="hide_root">Hide Root</string>
    <string name="hide_xposed">Hide Xposed</string>
    <string name="userRemark">User Remark</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="permission_setting">Setting</string>
    <string name="no_reminders">No Reminders</string>
    <string name="app_stop">Stop Running</string>
    <string name="app_stop_hint">Do you want to stop %s forcibly?</string>
    <string name="is_stop">%s is Stopped</string>
    <string name="app_clear">Clear Data</string>
    <string name="app_clear_hint">Clear Data for %s?</string>
    <string name="app_remove">Uninstall App</string>
    <string name="app_shortcut">Create Shortcut</string>
    <string name="shortcut_name">Shortcut Name</string>
    <string name="try_add_shortcut">Try Added To Desktop</string>
    <string name="add_shortcut_fail_msg">If the addition fails, please go to system settings and open the permission of "create desktop shortcut" for BlackBox</string>
    <string name="install_success">Installed Successfully</string>
    <string name="install_fail">Installed Failed: %s</string>
    <string name="install_fail_no_msg">Installed Failed</string>
    <string name="uninstall_success">Uninstalled Successfully</string>
    <string name="uninstall_fail">Uninstalled Failed</string>
    <string name="uninstall_app">Uninstall App</string>
    <string name="uninstall_app_hint">Uninstall %s, and relevant data will be cleared after uninstallation?</string>
    <string name="uninstall_module">Uninstall Module</string>
    <string name="uninstall_module_hint">Do you want to uninstall this module? It will no longer work after uninstallation?</string>
    <string name="remove_success">Removed Successfully</string>
    <string name="clear_success">Cleared Successfully</string>
    <string name="start_fail">Launched Failed</string>
    <string name="start_in_outside">Start module in outside</string>
    <string name="restart_module">Restart app to apply change</string>
    <string name="cannot_create_shortcut">This desktop does not support creating shortcuts</string>
    <string name="uninstall_module_toast">Please uninstall the xposed module in the Module Manager</string>
    <string name="other">Others</string>
    <string name="daemon_enable">Daemon</string>
    <string name="gms_manager">GMS Manager</string>
    <string name="jump_gms">Go to Gms Manager</string>
    <string name="enable_gms">Enable Service</string>
    <string name="enable_gms_hint">Opening Google services can make youtube and other software that strongly rely on Google play services run normally.</string>
    <string name="disable_gms">Disable Service</string>
    <string name="disable_gms_hint">Clear the current Google service environment? Google service data will be cleared.</string>
    <string name="no_gms">Currently, there is no Google service environment on mobile phones.</string>
    <string name="icon"><![CDATA["    <string name=\"icon\">icon</string>"]]></string>
    <string name="navigation_drawer_open">navigation_drawer_open</string>
    <string name="navigation_drawer_close">navigation_drawer_close</string>
    <string name="open">open</string>
    <string name="close">close</string>

    <string-array name="sound_modes">
        <item>Silent</item>
        <item>Vibration</item>
        <item>Normal</item>
    </string-array>

    <string-array name="sound_mode_values">
        <item>silent</item>
        <item>vibration</item>
        <item>normal</item>
    </string-array>

    <string-array name="file_options">
        <item>Open</item>
        <item>Copy</item>
        <item>Move</item>
        <item>Delete</item>
    </string-array>

</resources>
